# F1-Player

./: .gitignore  CMakeLists.txt  dev.notes
src/: codec-vid.cpp  exp.cpp  imageTest.cpp  main.cpp  test.cpp
